NCPCommons tests refactor